# dynamicity

./: .gitignore  dfm_fvar_scaling.txt  dyn.ipynb  dyn.py  dyn2.ipynb  dyn4.ipynb  ici_explain.txt  intensity_descriptive_stats.py  label_asu_indices_cctbx.py  local_changes.patch  parse_crystfel_stream.py  plot_orientation_sigma.py  plotting.py  results.csv  rocking_curve_app.html  rocking_curve_app.py  rocking_curve_app_LTA_staircase copy.html  rocking_curve_app_LTA_staircase.html  scale_hist.py  scale_stream_v1.py  scale_stream_v2.py  scale_stream_v3.py  scale_stream_v4.py  scale_stream_v5.py  scale_stream_v6.py  scale_stream_v7.py
bloch_wave_analyser_project/: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
bloch_wave_analyser_project/analysis_output_reflection_spread/: low_index_s_orient_vs_frame.html  mid_high_index_s_orient_vs_frame.html  s_orient_quantitative_interpretation.txt
bloch_wave_analyser_project/analysis_output_uncertainty_lta1/: summary.txt
bloch_wave_analyser_project/analysis_output_uncertainty_lta1_zoneaxis_refresh/: summary.txt
bloch_wave_analyser_project/analysis_output_uncertainty_lta1_zoneaxis_tuned/: summary.txt
bloch_wave_analyser_project/data/: GXPARM.XDS  INTEGRATE.HKL  XDS.INP
bloch_wave_analyser_project/examples/: export_orientation_peaks_html.py  export_single_frame_gaussian_html.py  plot_top_varying_observed.py  plot_top_varying_reflections.py  run_analysis.py  run_dynamical_uncertainty.py  verify_thickness_against_real.py
bloch_wave_analyser_project/mfm300_stream_dyn/: run_metadata.json
bloch_wave_analyser_project/notebooks/: bloch_analyser.ipynb
bloch_wave_analyser_project/scripts/: compute_sres.py  inflate_integrate_sigma_by_frame_score.py  inflate_integrate_sigma_by_score.py  inflate_stream_sigmas_by_frame_score.py  plot_stream_orientations.py  simulate_stream_patterns.py  stream_frame_s_orient.py
bloch_wave_analyser_project/src/: __init__.py  bloch.py  dynamical_uncertainty.py  geometry.py  html_visualization.py  metrics.py  parsers.py  pets2.py  pipeline.py  visualization.py  wilson.py
bloch_wave_analyser_project/tests/: test_dynamical_uncertainty.py  test_geometry.py  test_metrics.py  test_parsers.py  test_pets2.py  test_pipeline.py
oridyn_project_corrected/: README.md  pyproject.toml
oridyn_project_corrected/examples/: minimal_example.stream  run_trace_hkls.sh  selected_hkls.csv  weight_presets.json
oridyn_project_corrected/oridyn/: __init__.py  cli.py  config.py  geometry.py  hkl_trace.py  laue_zone.py  outputs.py  plots.py  reweight.py  self_risk.py  sigma_model.py
oridyn_project_corrected/oridyn_stream_parallel.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
oridyn_project_corrected/tests/: test_axis_prediction.py  test_hkl_generation.py  test_hkl_trace.py  test_normalization.py  test_pipeline_smoke.py  test_reweight.py
sed_scaler/: README.md  pyproject.toml
sered_scaler/: README.md  csv2hkl.py  pattern_15068.tif  pyproject.toml
sered_scaler/sered_scaler/: __init__.py
sered_scaler/sered_scaler.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
sered_scaler/sered_scaler/io/: __init__.py  (+1 more)
serialed_orientation_sigma/: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
serialed_orientation_sigma/data/: README.md  README_STW.md  run_all_xds.sh  run_all_xds_stw.sh
serialed_orientation_sigma/examples/: export_weights.py  run_pipeline.py  run_thickness_poc.py
serialed_orientation_sigma/notebooks/: orientation_analysis.ipynb  reflection_sensitivity.ipynb  thickness_validation.ipynb
serialed_orientation_sigma/src/: __init__.py  geometry.py  orientation_metrics.py  parsers.py  pipeline.py  provenance.py  reflection_metrics.py  thickness_validation.py  visualization.py  weighting.py
serialed_orientation_sigma/tests/: test_geometry.py  test_orientation_metrics.py  test_weighting.py
xds_rocking_curves/xds_rocking_curves/: .gitignore  README.md  pyproject.toml  requirements.txt
(+9203 files in other folders)
