[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bloch-wave-dynamicality-analyser"
version = "0.1.0"
description = "Research-oriented XDS Bloch-wave dynamicality analysis tools"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy",
  "scipy",
  "pandas",
  "matplotlib",
  "jupyter",
  "ipywidgets",
  "plotly",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
