[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "sered_scaler"
version         = "0.1.0"
description     = "Serial electron‑diffraction scaling utilities"
readme          = "README.md"
authors         = [{ name = "Buster Blomberg", email = "buster.blomberg@su.se" }]
license         = "MIT"
requires-python = ">=3.9"
dependencies    = [
    "numpy>=1.22",
    "pandas>=1.5",
    "scipy>=1.9",
    "scikit-learn>=1.2",
]

[project.optional-dependencies]
dask  = ["dask[dataframe]>=2024.3"]
bayes = ["pymc>=5.10", "arviz>=0.17"]

[project.scripts]
scale_serial_ed = "sered_scaler.cli.scale_serial_ed:main"