[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "serialed-orientation-sigma"
version = "0.1.0"
description = "Orientation-aware dynamical weighting for SerialED datasets"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "scipy>=1.11",
  "pandas>=2.1",
  "matplotlib>=3.8",
  "numba>=0.59",
  "ipywidgets>=8.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "jupyter>=1.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["."]
